--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
         <h1>Hello!</h1>
         <p>This is a temporary site so that there's something at this domain</p>
         <p>I'll make this site look better eventually</p>
+        <p><a href="https://github.com/nercesus">my github</a></p>
     </body>
 </html>
